--- a/style.css
+++ b/style.css
@@ -21,3 +21,30 @@
 	height: 500px;
 	background-color: orange;
 }
+
+.main {
+	width: 960px;
+	height: 1400px;
+	margin: 0 auto;
+}
+
+.side-left {
+	width: 230px;
+	height: 1400px;
+	background-color: limegreen;
+	float: left;
+}
+
+.center {
+	width: 500px;
+	height: 1400px;
+	background-color: green;
+	float: left;
+}
+
+.side-right {
+	width: 230px;
+	height: 1400px;
+	background-color: limegreen;
+	float: left;
+}
